fix dark mode

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,6 +92,10 @@ body{
     margin-top: 20px;
 }
 
+.title.light{
+    color: #fff;
+}
+
 
 /* article */
 
